--- a/css/thoughts.css
+++ b/css/thoughts.css
@@ -1,14 +1,13 @@
 /*DESKTOP */
 
 body {
-  background-color: #fff;
+  width:860px;
+  margin:0 auto;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: 'Roboto', sans-serif;
-  color:#727272;
   font-weight:400;
-  width:860px;
-  margin:0 auto;
+  color:#727272;
 }
 
 h1, h2, h3, h4, h5, h6 {
